Fully commented the code. Finished Test.java. Wrote a shell script, test.sh, to test different command line arguments.